@@ -1,6 +1,15 @@
 # Filesystem type for the initrd.
 INITRD_FS = ext2
 
+# We have to redefine genext2fs to use 4k blocks and leave some space
+define genext2fs
+  nb=$$(find $(TREE) | wc -l); \
+  sz=$$(du -s $(TREE) | cut -f 1); \
+  genext2fs -d $(TREE) -B 4096 -o hurd -m 0 \
+	-b $$(expr $$sz / 4 + $$nb / 2 + 1024) \
+	-N $$(expr $$nb + 1024)
+endef
+
 # The image to use for a syslinux splash screen.
 SPLASH_PNG=boot/hurd/pics/klowner-hurd.png
 
