@@ -39,6 +39,8 @@ debian-installer (201007xx) UNRELEASED; urgency=low
   * Include a BDF font on Hurd images.
   * Use the newer "module --nounzip" grub command to load the initrd on Hurd,
     and let the gunzip store do the job.
+  * Move the definition of the genext2fs command-line up, so we can
+    override it in hurd.cfg.
 
  -- Martin Michlmayr <tbm@cyrius.com>  Fri, 23 Jul 2010 09:36:57 +0100
 
